--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 version: 1.0.2
 date: 2013-05-16
 tarball: https://bitbucket.org/resummino/resummino/downloads/resummino-1.0.2.tar.bz2
+
+exclude: ["README.md"]
